Added Close On Escape key functionality.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,20 +4,26 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MemoryAnalyzer"
+        xmlns:commands="clr-namespace:MemoryAnalyzer.Commands"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:ViewModel, IsDesignTimeCreatable=True}"
-        Title="MainWindow" Height="650" Width="525"
+        Title="MainWindow" Height="600" Width="1060"
         Closing="MainWindow_OnClosing">
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
     </Window.Resources>
+    <Window.InputBindings>
+        <KeyBinding Key="Escape" Command="{x:Static commands:CloseWindowCommand.Instance}" CommandParameter="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"/>
+    </Window.InputBindings>
+    
     <Grid>
 
-    <Grid.RowDefinitions>
-        <RowDefinition Height="*"/>
-    </Grid.RowDefinitions>
+    <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*"/>
+        <ColumnDefinition Width="*"/>
+    </Grid.ColumnDefinitions>
 
-        <TreeView Grid.Row="0" ItemsSource="{Binding Root}">
+        <TreeView Grid.Column="0" ItemsSource="{Binding Root}">
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate ItemsSource="{Binding Children}">
                     <Grid>
@@ -42,5 +48,13 @@
             </TreeView.ItemTemplate>
         </TreeView>
 
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            
+            <TextBlock Text="Biggest File"/>
+            <TextBlock Text="{Binding BiggestFile}"/>
+        </Grid>
     </Grid>
 </Window>
